# LLM-IR

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: roadmap.md  safety.md  schema-notes.md  vision.md
examples/: en_formal.llm-ir.json  zh_slang.llm-ir.json
schema/: llm-ir.v0.schema.json
src/llm_ir/: __init__.py  cli.py  core.py
tests/: test_core.py  test_schema_examples.py
