[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-ir"
version = "0.0.1"
description = "An open intermediate representation for multilingual, privacy-aware human communication."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "LLM-IR Contributors" }
]
keywords = ["llm", "intermediate-representation", "translation", "multilingual", "semantic-ir"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: Linguistic"
]

[project.scripts]
llm-ir = "llm_ir.cli:main"

[project.optional-dependencies]
dev = [
  "jsonschema>=4",
  "pytest>=8"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
